# nexus

./: .gitignore  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: advanced-features.md  ansible-migration.md  cli.md  getting-started.md  inventory-less-execution.md  inventory.md  modules.md  network-discovery.md  playbook-syntax.md
examples/: 01-hello-world.nx.yaml  02-variables-and-loops.nx.yaml  03-registered-variables.nx.yaml  04-handlers.nx.yaml  05-webserver-setup.nx.yaml  06-user-management.nx.yaml  07-docker-deploy.nx.yaml  08-using-roles.nx.yaml  09-system-patching.nx.yaml  10-include-tasks.nx.yaml  dynamic-inventory.sh  inventory.yaml  simple-inventory.yaml
examples/tasks/: common.yml  user-setup.yml
examples/templates/: app.conf.j2
scripts/: install.sh
src/: lib.rs  main.rs
src/converter/: ansible_parser.rs  expression.rs  mod.rs  module_mapper.rs  nexus_writer.rs  report.rs  role_converter.rs
src/executor/: async_jobs.rs  checkpoint.rs  context.rs  dag.rs  facts.rs  handlers.rs  include_handler.rs  local.rs  mod.rs  plan.rs  retry.rs  scheduler.rs  ssh.rs  tags.rs
src/inventory/: discovery.rs  discovery_daemon.rs  discovery_profile.rs  dynamic.rs  groups.rs  mod.rs  static_inv.rs
src/modules/: async_status.rs  command.rs  file.rs  mod.rs  package.rs  service.rs  shell.rs  template.rs  user.rs
src/output/: diff.rs  errors.rs  (+6 more)
(+26 files in other folders)
