[package]
name = "nexus"
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sheldon Lewis"]
description = "Next-generation infrastructure automation. Ansible, but faster and simpler."
repository = "https://github.com/zeddy89/nexus"
keywords = ["automation", "infrastructure", "devops", "configuration-management", "ssh"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH
ssh2 = "0.9"

# Parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
pest = "2.7"
pest_derive = "2.7"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# Output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
console = "0.15"
colored = "3"
ratatui = "0.28"
crossterm = "0.29"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
once_cell = "1"
parking_lot = "0.12"
dashmap = "5"
futures = "0.3"
async-trait = "0.1"
regex = "1"
base64 = "0.22"
rand = "0.8"
similar = "2.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
dns-lookup = "3"

# Vault/Encryption
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[[bin]]
name = "nexus"
path = "src/main.rs"
